--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
-Flask
-Flask-SQLAlchemy
-Flask-Login
-Werkzeug
-psycopg2-binary
-Flask-Migrate
-Flask-WTF
-WTForms
-Flask-Mail
-email_validator
-itsdangerous
+alembic==1.16.2
+bcrypt==4.3.0
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+dnspython==2.7.0
+email_validator==2.2.0
+Flask==3.1.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.2.3
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.2
+psycopg2-binary==2.9.10
+SQLAlchemy==2.0.41
+typing_extensions==4.14.0
+Werkzeug==3.1.3
+WTForms==3.2.1
